<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.navigation.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_view_inc"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/black"
    android:fitsSystemWindows="true"
    android:visibility="visible">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/nav_header"
            layout="@layout/drawer_header" />

        <View
            android:id="@+id/header_seperator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/nav_header"
            android:background="@color/colorBlueDark" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_seperator"
            android:layout_above="@+id/nav_bottom">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/nav_account_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardBackgroundColor="@color/colorPrimaryLight">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="@dimen/nav_image_size"
                                android:layout_height="@dimen/nav_image_size"
                                android:src="@drawable/ic_account_circle_white_48dp" />

                            <TextView
                                style="@style/AppTheme.Intro"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@string/account_settings"
                                android:textColor="@color/dtintcolor"
                                android:textSize="@dimen/nav_text_size"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <RelativeLayout
                            android:id="@+id/rl_if_account_signIn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone">

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/white"/>

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/nav_circle_image"
                                android:layout_width="@dimen/nav_image_size"
                                android:layout_height="@dimen/nav_image_size"
                                android:src="@mipmap/icon"
                                android:layout_marginTop="3dp"
                                android:layout_centerHorizontal="true"
                                app:civ_border_width="2dp"
                                app:civ_border_color="@color/white"/>

                            <TextView
                                android:id="@+id/nav_name"
                                style="@style/AppTheme.Intro"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_below="@+id/nav_circle_image"
                                android:text="@string/name"
                                android:textColor="@color/dtintcolor"
                                android:textSize="16sp"
                                android:textStyle="normal"
                                android:layout_marginStart="10dp"/>

                            <TextView
                                android:id="@+id/nav_mail"
                                style="@style/AppTheme.Intro"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_below="@+id/nav_name"
                                android:text="@string/mail"
                                android:textColor="@color/dtintcolor"
                                android:textSize="16sp"
                                android:textStyle="normal"
                                android:layout_marginStart="10dp"/>

                        </RelativeLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/nav_tuner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardBackgroundColor="@color/colorPrimaryLight">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/nav_image_size"
                            android:layout_height="@dimen/nav_image_size"
                            android:src="@drawable/ic_mode_ukulele" />

                        <TextView
                            style="@style/AppTheme.Intro"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/tuner"
                            android:textColor="@color/dtintcolor"
                            android:textSize="@dimen/nav_text_size"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/nav_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorBlueDark" />

            <androidx.cardview.widget.CardView
                android:id="@+id/nav_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/colorPrimaryLight"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/nav_image_size"
                        android:layout_height="@dimen/nav_image_size"
                        android:src="@drawable/icons_logout_rounded_up_50px"
                        android:tint="@color/white"/>

                    <TextView
                        style="@style/AppTheme.Intro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/logout"
                        android:textColor="@color/accent"
                        android:textSize="@dimen/nav_text_size"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </RelativeLayout>

</com.google.android.material.navigation.NavigationView>